# AgentMind-Framework

./: .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  ADVANCED_FEATURES.md  ADVANCED_FEATURES_REPORT.md  ARCHITECTURE.md  CHANGELOG.md  CHAT_README.md  CONTRIBUTING.md  DEMO_SUMMARY.md  DEVELOPER_TOOLS.md  Dockerfile  Dockerfile.chat  Dockerfile.dashboard  Dockerfile.production  EXAMPLES.md  EXAMPLES_INDEX.md  FAQ.md  GIT_COMMIT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION.md  PERFORMANCE_IMPLEMENTATION.md  PHASE0_SUMMARY.md  PHASE1_COMPLETE.md  PHASE1_PHASE2_SUMMARY.md  PHASE1_REPORT.md  PHASE1_SUMMARY.md  PHASE1_TESTING_OPTIMIZATION_REPORT.md  PHASE4_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  UPDATE_README_LINKS.md  V0.3.0_COMPLETION_REPORT.md  VIDEO_SCRIPT.md  WAVE2_CLI_COMPLETION_REPORT.md  (+25 more)
.agentmind_checkpoints/: checkpoint_20260420_014041.json  checkpoint_20260420_014042.json  checkpoint_20260420_014158.json  checkpoint_20260420_014217.json  checkpoint_20260420_014230.json  checkpoint_20260420_014231.json  checkpoint_20260420_014249.json  checkpoint_20260420_014306.json  checkpoint_20260420_014307.json  checkpoint_20260420_113846.json  checkpoint_20260420_113847.json  checkpoint_20260420_113848.json  checkpoint_20260420_113855.json  checkpoint_20260420_120059.json  checkpoint_20260420_120100.json  checkpoint_20260420_120104.json  checkpoint_20260420_125350.json  checkpoint_20260420_125351.json  checkpoint_20260420_125358.json  checkpoint_20260420_135247.json  demo_checkpoint.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
benchmarks/: performance_benchmark.py  visualize_benchmarks.py
content/: article_1_why_agentmind.md  article_2_build_research_team.md  article_3_distributed_swarm.md  awesome_list_submissions.md  brand_assets.md  community_engagement_plan.md  partnership_proposals.md  social_media_posts.md  video_scripts.md
dashboard/: package.json  server.js
dashboard/views/: dashboard.ejs
docs/: CLI_REFERENCE.md  CLI_TUTORIAL.md  DEBUGGING.md  INTEGRATIONS.md  MULTIMODAL.md  ORCHESTRATION_MODES.md  PERFORMANCE.md  PHASE4.md  PLUGINS.md  PLUGIN_DEVELOPMENT_GUIDE.md  README.md  SECURITY_GUIDE.md  TESTING.md  WAVE2_UI_DASHBOARD.md  WAVE2_USER_GUIDE.md  agent-roles.md  index.md  plugin_marketplace.md
docs/getting-started/: quickstart.md
examples/: README.md  advanced_agent_features.py  advanced_mind_features.py  advanced_orchestration.py  basic_collaboration.py  code_review_team.py  custom_tools.py  data_analysis_team.py  debate_example.py  distributed_research_team.py  fastapi_integration.py  hierarchical_example.py  marketing_campaign_team.py  monitoring_example.py  multimodal_audio_example.py  multimodal_document_example.py  multimodal_image_example.py  orchestration_showcase.py  performance_optimization.py  plugin_discord_example.py  plugin_slack_example.py  research_team.py  run_benchmarks.py  self_improvement.py  software_dev_swarm.py  template_marketplace.py  testing_example.py  visualization_dashboard.py  wave1_demo.py
examples/advanced/: README.md  adversarial_debate.py  distributed_system.py  human_in_loop.py  multimodal_agent.py  requirements.txt  self_improving_agent.py
examples/integrations/: README.md  autogen_integration.py  crewai_integration.py  haystack_integration.py  huggingface_integration.py  langchain_integration.py  llamaindex_integration.py  openai_assistants_compat.py  requirements.txt
examples/tutorials/: 01_quickstart.py  02_memory.py  03_tools.py  04_orchestration.py  05_plugins.py  06_production.py  README.md  requirements.txt
examples/use_cases/: README.md  code_review_automation.py  content_generation.py  customer_support.py  ecommerce_recommendations.py  financial_analysis.py  game_ai_development.py  iot_device_management.py  legal_document_analysis.py  medical_diagnosis.py  scientific_research.py  supply_chain_optimization.py
logs/plugin_audit/: audit_20260420.jsonl
scripts/: README.md  analyze_code_quality.py  analyze_documentation.py  bump_version.py  improve_code_quality.py  release.sh
src/agentmind/: __init__.py  dev_tools.py  testing.py
static/css/: chat.css
static/js/: chat.js
templates/: agent_designer_enhanced.html  chat.html
templates/tools/: agent_designer.html  config_builder.html  (+1 more)
tests/: profile_core.py  test_advanced_agent.py  test_advanced_mind.py  test_advanced_orchestration.py  test_agent_llm.py  test_basic.py  test_cli_wave2.py  test_integration.py  test_integrations.py  test_llm_comprehensive.py  test_llm_providers.py  test_memory.py  test_orchestration.py  test_performance.py  test_plugin_system_production.py  test_plugins_security_comprehensive.py  test_property_based.py  test_retry.py  test_templates.py  test_tools.py  test_types.py  test_utils_comprehensive.py  test_wave2_features.py
tutorials/: 01_getting_started.ipynb  02_advanced_topics.ipynb  README.md
(+77 files in other folders)
