[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentmind"
version = "0.2.0"
description = "Lightweight, controllable multi-agent collaboration framework with local-first design"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Terry Carson", email = "cym3118288@gmail.com"}
]
maintainers = [
    {name = "Terry Carson", email = "cym3118288@gmail.com"}
]
keywords = ["multi-agent", "ai", "llm", "agents", "collaboration", "local-first", "lightweight"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.5.0; python_version < '3.11'",
]

[project.optional-dependencies]
# Full installation with all LLM providers and features
full = [
    "litellm>=1.0.0",
    "httpx>=0.24.0",
    "aiohttp>=3.8.0",
]

# Local-first setup with Ollama support
local = [
    "httpx>=0.24.0",
    "aiohttp>=3.8.0",
]

# Memory backends
memory = [
    "chromadb>=0.4.0",
    "numpy>=1.24.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.22.0",
]

# Testing dependencies
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

# Documentation dependencies
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.22.0",
]

# Production features (Phase 3)
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

cli = [
    "click>=8.1.0",
    "rich>=13.0.0",
]

# Advanced features (Phase 4)
visualization = [
    "gradio>=4.0.0",
]

evaluation = [
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
agentmind = "cli:cli"

[project.urls]
Homepage = "https://github.com/cym3118288-afk/AgentMind-Framework"
Documentation = "https://github.com/cym3118288-afk/AgentMind-Framework"
Repository = "https://github.com/cym3118288-afk/AgentMind-Framework"
Issues = "https://github.com/cym3118288-afk/AgentMind-Framework/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentmind"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/examples",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_optional = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
]
markers = [
    "asyncio: marks tests as async",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src/agentmind"]
omit = [
    "*/tests/*",
    "*/examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
